--- a/views/wedding.jade
+++ b/views/wedding.jade
@@ -48,7 +48,7 @@ block content
 							li Shannon Maranan
 							li Joyce Axalan
 							li Monica Axalan
-							li MaryNadine Maranan
+							li Mary Nadine Maranan
 
 				div.row
 					div.col-md-6
