--- a/views/wedding2.jade
+++ b/views/wedding2.jade
@@ -11,57 +11,60 @@ block content
 				div.row.brideAndGroom
 					div.col-md-12
 						ul
-							li <img src="/images/male-blank.jpg" />
-							li <img src="/images/female-blank.jpg" />
-							
+							li <img src="/images/male-blank.jpg" /><span>Herald</span>
+							li <img src="/images/female-blank.jpg" /><span>Joanne</span>
+
+				br
 				div.row
 					div.col-md-6
 						h3 <span>B</span>est <span>M</span>en
 						ul
-							li <img src="/images/male-blank.jpg" />
-							li <img src="/images/male-blank.jpg" />
+							li <img src="/images/male-blank.jpg" /><span>Harvey</span>
+							li <img src="/images/male-blank.jpg" /><span>Herschel</span>
 					div.col-md-6
 						h3 <span>M</span>atron of <span>H</span>onour
 						ul
-							li <img src="/images/female-blank.jpg" />
+							li <img src="/images/female-blank.jpg" /><span>Mary Katherine</span>
 
 				div.row
 					div.col-md-12
 						h3 <span>G</span>roomsmen
 						ul
-							li <img src="/images/male-blank.jpg" />
-							li <img src="/images/male-blank.jpg" />
-							li <img src="/images/male-blank.jpg" />
-							li <img src="/images/male-blank.jpg" />
-							li <img src="/images/male-blank.jpg" />
-							li <img src="/images/male-blank.jpg" />
-							li <img src="/images/male-blank.jpg" />
-							li <img src="/images/male-blank.jpg" />
-							li <img src="/images/male-blank.jpg" />
+							li <img src="/images/male-blank.jpg" /><span>Alvin</span>
+							li <img src="/images/male-blank.jpg" /><span>Archie</span>
+							li <img src="/images/male-blank.jpg" /><span>Bennet</span>
+							li <img src="/images/male-blank.jpg" /><span>Christian</span>
+							li <img src="/images/male-blank.jpg" /><span>Jekko</span>
+							li <img src="/images/male-blank.jpg" /><span>Mark</span>
+							li <img src="/images/male-blank.jpg" /><span>Marlon</span>
+							li <img src="/images/male-blank.jpg" /><span>Raymond</span>
 				div.row
 					div.col-md-12
 						h3 <span>B</span>ridesmaids
 						ul
-							li <img src="/images/female-blank.jpg" />
-							li <img src="/images/female-blank.jpg" />
-							li <img src="/images/female-blank.jpg" />
-							li <img src="/images/female-blank.jpg" />
-							li <img src="/images/female-blank.jpg" />
-							li <img src="/images/female-blank.jpg" />
-							li <img src="/images/female-blank.jpg" />
-							li <img src="/images/female-blank.jpg" />
-							li <img src="/images/female-blank.jpg" />
+							li <img src="/images/female-blank.jpg" /><span>Christine</span>
+							li <img src="/images/female-blank.jpg" /><span>Jessica</span>
+							li <img src="/images/female-blank.jpg" /><span>Joyce</span>
+							li <img src="/images/female-blank.jpg" /><span>Katrina</span>
+							li <img src="/images/female-blank.jpg" /><span>Monica</span>
+							li <img src="/images/female-blank.jpg" /><span>Nadine</span>
+							li <img src="/images/female-blank.jpg" /><span>Shannon</span>
+							li <img src="/images/female-blank.jpg" /><span>Sherlyn</span>
 
 				div.row
 					div.col-md-6
 						h3 <span>J</span>unior <span>G</span>roomsmens
 						ul
-							li <img src="/images/male-blank.jpg" />
-							li <img src="/images/male-blank.jpg" />
-							li <img src="/images/male-blank.jpg" />
+							li <img src="/images/male-blank.jpg" /><span>John</span>
+							li <img src="/images/male-blank.jpg" /><span>Jon</span>
+							li <img src="/images/male-blank.jpg" /><span>Zeeron</span>
 					div.col-md-6
 						h3 <span>J</span>unior <span>B</span>ridesmaids
 						ul
-							li <img src="/images/female-blank.jpg" />
-							li <img src="/images/female-blank.jpg" />
-							li <img src="/images/female-blank.jpg" />
+							li <img src="/images/female-blank.jpg" /><span>Gayle</span>
+							li <img src="/images/female-blank.jpg" /><span>Jezel</span>
+							li <img src="/images/female-blank.jpg" /><span>Rhegie</span>
+
+				br
+				br
+				br
