--- a/public/stylesheets/Source/wedding2.scss
+++ b/public/stylesheets/Source/wedding2.scss
@@ -14,12 +14,37 @@ body
 		
 		li
 		{
+			text-align: center;
 			display: inline-block;
 			list-style-type: none;
+			opacity: 0.75;
+			transition: 0.3s ease;
+			margin: 5px;
 
 			img 
 			{
-				margin: 5px;
+				margin: 0 auto;
+				display: block;
+			}
+
+			span 
+			{
+				z-index: -99;
+				display: none;
+			}
+
+			&:hover 
+			{
+				transform: scale(1.5, 1.5);
+				opacity: 1;
+				img 
+				{
+				}
+
+				span 
+				{
+					display: block;
+				}
 			}
 		}
 	}	
@@ -48,17 +73,34 @@ body
 		background-image: url('../images/cancun-mobile.jpg');
 	}
 
-	.brideAndGroom
+	.content
 	{
-		img 
+		ul
 		{
-			width: 125px;
-			height: 175px;
-
-			&:first-child
+			li
 			{
-				margin-left: 5px !important;
-				margin-right: 5px !important;
+				img 
+				{
+					width: 80px;
+					height: 80px;
+				}
+			}
+		}	
+
+
+
+		.brideAndGroom
+		{
+			img 
+			{
+				width: 125px;
+				height: 175px;
+
+				&:first-child
+				{
+					margin-left: 5px !important;
+					margin-right: 5px !important;
+				}
 			}
 		}
 	}
