--- a/views/wedding-social.jade
+++ b/views/wedding-social.jade
@@ -54,7 +54,7 @@ block content
 			h3.thank-you.center For those who have already purchased tickets, thank you so much for your love and support!
 
 			h2.subheading.center <span>D</span>ress <span>U</span>p!
-			p Our wedding social will be Halloween themed! Buy or hand-make the best halloween costume you can to be the best dressed at the social. We're giving awards for:
+			p Our wedding social will be Halloween themed! Buy or hand-make the best halloween costume to be the best dressed at the social. We're giving awards for:
 			div.col-xs-offset-1
 				ul.col-md-12
 					li The Best Dressed Male
