--- a/views/wedding.jade
+++ b/views/wedding.jade
@@ -4,67 +4,81 @@ block styles
 	link(rel='stylesheet', href='/stylesheets/wedding.css')
 
 block content
-	//- div.row
-	//- 	div.col-sm-12.center
-	//- 		h1 <span>W</span>edding
 	div.row
-		div.col-sm-8.col-sm-offset-2
+		div.col-sm-10.col-sm-offset-1
 			div.center
 				h1 <span>B</span>ride and <span>G</span>room
-				p.brideAndGroom Herald Gutierrez and Joanne Rutaquio
+				div.row.brideAndGroom
+					div.col-md-12
+						ul.headshot
+							li <img src="/images/female-blank.jpg" /><span>Joanne</span>
+							li <img src="/images/male-blank.jpg" /><span>Herald</span>
 
 				div.row
-					div.col-md-6
-						h3 <span>B</span>est <span>M</span>en
-						ul
-							li Harvey Gutierrez
-							li Herschel Gutierrez
 					div.col-md-6
 						h3 <span>M</span>atron of <span>H</span>onour
-						ul
-							li Mary Katherine Ballesteros
-
+						ul.headshot
+							li <img src="/images/female-blank.jpg" /><span>Mary Katherine</span>
+					div.col-md-6
+						h3 <span>B</span>est <span>M</span>en
+						ul.headshot
+							li <img src="/images/male-blank.jpg" /><span>Harvey</span>
+							li <img src="/images/male-blank.jpg" /><span>Herschel</span>
+							
 				div.row
-					div.col-md-6
-						h3 <span>G</span>roomsmen
-						ul
-							li Archie Ballesteros
-							li Jekko Axalan
-							li Mark Capucion
-							li &nbsp;
-							li Bennet Javate
-							li Marlon Axalan
-							li Alvin Albay
-							li Christian James Lozano
-							li Raymond Dabu
-					div.col-md-6
+					div.col-md-12
 						h3 <span>B</span>ridesmaids
-						ul
-							li Christine Capucion
-							li Katrina Galapon
-							li Jessica Axalan
-							li &nbsp;
-							li Sherlyn Watson
-							li Shannon Maranan
-							li Joyce Axalan
-							li Monica Axalan
-							li Mary Nadine Maranan
+						ul.headshot
+							li <img src="/images/female-blank.jpg" /><span>Christine</span>
+							li <img src="/images/female-blank.jpg" /><span>Jessica</span>
+							li <img src="/images/female-blank.jpg" /><span>Joyce</span>
+							li <img src="/images/female-blank.jpg" /><span>Katrina</span>
+							li <img src="/images/female-blank.jpg" /><span>Monica</span>
+							li <img src="/images/female-blank.jpg" /><span>Nadine</span>
+							li <img src="/images/female-blank.jpg" /><span>Shannon</span>
+							li <img src="/images/female-blank.jpg" /><span>Sherlyn</span>
 
 				div.row
-					div.col-md-6
-						h3 <span>J</span>unior <span>G</span>roomsmens
-						ul
-							li Zeeron Maranan
-							li Jon Gutierrez
-							li John Raven Andrin
+					div.col-md-12
+						h3 <span>G</span>roomsmen
+						ul.headshot
+							li <img src="/images/male-blank.jpg" /><span>Alvin</span>
+							li <img src="/images/male-blank.jpg" /><span>Archie</span>
+							li <img src="/images/male-blank.jpg" /><span>Bennet</span>
+							li <img src="/images/male-blank.jpg" /><span>Christian</span>
+							li <img src="/images/male-blank.jpg" /><span>Jekko</span>
+							li <img src="/images/male-blank.jpg" /><span>Mark</span>
+							li <img src="/images/male-blank.jpg" /><span>Marlon</span>
+							li <img src="/images/male-blank.jpg" /><span>Raymond</span>
+
+				div.row
 					div.col-md-6
 						h3 <span>J</span>unior <span>B</span>ridesmaids
-						ul
-							li Jezel Axalan
-							li Gayle Baybay
-							li Rhegie Axalan
+						ul.headshot
+							li <img src="/images/female-blank.jpg" /><span>Gayle</span>
+							li <img src="/images/female-blank.jpg" /><span>Jezel</span>
+							li <img src="/images/female-blank.jpg" /><span>Rhegie</span>
+					div.col-md-6
+						h3 <span>J</span>unior <span>G</span>roomsmen
+						ul.headshot
+							li <img src="/images/male-blank.jpg" /><span>John</span>
+							li <img src="/images/male-blank.jpg" /><span>Jon</span>
+							li <img src="/images/male-blank.jpg" /><span>Zeeron</span>
+
 
 				div.row
+					div.col-md-6
+						h3 <span>F</span>lower <span>G</span>irls
+						ul.list
+							li Ashely Maranan
+							li Jenelle
+							li Karmyn Jade Maranan
+							li Lulu Presto
+							li Malayah Presto
+							li Marla Nagutum
+							li Sarah Presto
+							li Senia Mendoza
+							li Yhen Yhen Pangan
 					div.col-md-6
 						div.row
 							div.col-md-12
@@ -79,25 +93,18 @@ block content
 								h3 <span>C</span>oin <span>B</span>earer
 								ul
 									li Noah Presto
-					div.col-md-6
-						h3 <span>F</span>lower <span>G</span>irls
-						ul
-							li Ashely Maranan
-							li Jenelle
-							li Karmyn Jade Maranan
-							li Lulu Presto
-							li Malayah Presto
-							li Marla Nagutum
-							li Sarah Presto
-							li Senia Mendoza
-							li Yhen Yhen Pangan
 
 				div.row
-					div.col-md-6
-						h3 <span>L</span>ittle <span>G</span>room
-						ul
-							li Leo Carter Gutierrez
 					div.col-md-6
 						h3 <span>L</span>ittle <span>B</span>ride
 						ul
 							li Emily Adele Gutierrez
+					div.col-md-6
+						h3 <span>L</span>ittle <span>G</span>room
+						ul
+							li Leo Carter Gutierrez
+
+
+				br
+				br
+				br
