--- a/public/stylesheets/Source/wedding.scss
+++ b/public/stylesheets/Source/wedding.scss
@@ -16,12 +16,63 @@ body
 		{
 			list-style-type: none;
 		}
+
+		&.headshot
+		{
+			li
+			{
+				text-align: center;
+				display: inline-block;
+				opacity: 0.75;
+				transition: 0.3s ease;
+				margin: 5px;
+
+				img 
+				{
+					margin: 0 auto;
+					display: block;
+
+					border: 1px solid;
+					-webkit-border-radius: 20px;
+					-moz-border-radius: 20px;
+					border-radius: 20px;
+				}
+
+				span 
+				{
+					visibility: hidden;
+				}
+
+				&:hover, &:focus
+				{
+					transform: scale(1.5, 1.5);
+					opacity: 1;
+					z-index: 999;
+					padding: 0 10px;
+
+					span 
+					{
+						visibility: visible;
+					}
+				}
+			}
+		}
 	}	
 }
 
 .brideAndGroom
 {
-	font-size: 30px;
+	img 
+	{
+		width: 200px;
+		height: 250px;
+
+		&:first-child
+		{
+			margin-left: 15px !important;
+			margin-right: 15px !important;
+		}
+	}
 }
 
 /* Small devices (tablets, 768px and down) */
@@ -30,5 +81,41 @@ body
 	body
 	{
 		background-image: url('../images/cancun-mobile.jpg');
+	}
+
+	.content
+	{
+		.brideAndGroom
+		{
+			img 
+			{
+				width: 125px !important;
+				height: 175px !important;
+
+				&:first-child
+				{
+					margin-left: 5px !important;
+					margin-right: 5px !important;
+				}
+			}
+		}
+
+		ul.headshot
+		{
+			li
+			{
+
+				span 
+				{
+					visibility: visible;
+				}
+
+				img 
+				{
+					width: 80px;
+					height: 80px;
+				}
+			}
+		}	
 	}
 }
