Wedding - Round images to a circle

--- a/public/stylesheets/Source/wedding.scss
+++ b/public/stylesheets/Source/wedding.scss
@@ -31,11 +31,11 @@ body
 				{
 					margin: 0 auto;
 					display: block;
-
+					
 					border: 1px solid;
-					-webkit-border-radius: 20px;
-					-moz-border-radius: 20px;
-					border-radius: 20px;
+					-webkit-border-radius: 50%;
+					-moz-border-radius: 50%;
+					border-radius: 50%;
 				}
 
 				span 
