--- a/public/stylesheets/wedding.css
+++ b/public/stylesheets/wedding.css
@@ -18,9 +18,9 @@ body {
       margin: 0 auto;
       display: block;
       border: 1px solid;
-      -webkit-border-radius: 20px;
-      -moz-border-radius: 20px;
-      border-radius: 20px; }
+      -webkit-border-radius: 50%;
+      -moz-border-radius: 50%;
+      border-radius: 50%; }
     .content ul.headshot li span {
       visibility: hidden; }
     .content ul.headshot li:hover, .content ul.headshot li:focus {
