Social - Added a quick prize list

--- a/views/wedding-social.jade
+++ b/views/wedding-social.jade
@@ -61,4 +61,140 @@ block content
 					li The Best Dressed Female
 					li The Best Dressed Couple
 
-			h2.subheading.center <span>P</span>rizes: to be <span>A</span>nnounced...
+			h2.subheading.center <span>P</span>rizes
+			div.col-xs-offset-1
+				table.col-xs-12
+					thead
+						tr
+							th.col-xs-6 <h3>Grand Prize</h3>
+							th.col-xs-6 <h3>Donated By</h3>
+					tbody
+						tr
+							td $1000 Travel Voucher
+							td Archie & Mary Ballesteros, Honesto & Lita Rutaquio, and Lea Larion
+						tr
+							td &nbsp;
+							td &nbsp;
+						tr
+							td TV
+							td 
+						tr
+							td &nbsp;
+							td &nbsp;
+						tr
+							td GoPro Hero 5 
+							td Herschel Gutierrez and Joanna Reyes
+						tr
+							td &nbsp;
+							td &nbsp;
+						tr
+							td Apple Package 
+							td Harvey and Sheri Gutierrez
+						tr
+							td &nbsp;
+							td &nbsp;
+						tr
+							td Console (Nintendo Switch?)
+							td Axalan Family
+
+				table.col-xs-12
+					thead
+						tr
+							th <h3>Regular Prize</h3>
+							th <h3>Donated By</h3>
+					tbody
+						tr
+							td Yoli Package
+							td 
+						tr
+							td &nbsp;
+							td &nbsp;
+						tr
+							td Beauty Package (Eyelashes, Perfume, Facial, Makeup, Mani/Pedi)
+							td 
+						tr
+							td &nbsp;
+							td &nbsp;
+						tr
+							td Lottery Tree
+							td 
+						tr
+							td &nbsp;
+							td &nbsp;
+						tr
+							td Alcohol Package + Shotglass Roulette Wheel
+							td 
+						tr
+							td &nbsp;
+							td &nbsp;
+						tr
+							td Kitchen Aid Mixer
+							td Katrina Galapon, Alvin Albay, and Sherlyn & Jeremy Watson
+						tr
+							td &nbsp;
+							td &nbsp;
+						tr
+							td Fitness Package
+							td Christine Capucion, Nadine Maranan, and Gayle Baybay
+						tr
+							td &nbsp;
+							td &nbsp;
+						tr
+							td Date Night Package
+							td 
+						tr
+							td &nbsp;
+							td &nbsp;
+						tr
+							td His and Hers Package (Kate Spade Bag and Waller)
+							td Harvey and Sheri Gutierrez
+						tr
+							td &nbsp;
+							td &nbsp;
+						tr
+							td Jets Package
+							td 
+						tr
+							td &nbsp;
+							td &nbsp;
+
+						tr
+							td Basketball Package (Hoop and Ball)
+							td Mark Capucion, Christian Lozano, Shannon Maranan, John Raven 
+
+						tr
+							td &nbsp;
+							td &nbsp;
+						tr
+							td Car Package (Oil Change, Car Wash, Car Fresheners, Etc...)
+							td 
+						tr
+							td &nbsp;
+							td &nbsp;
+
+						tr
+							td Mini-Fridge with Beer
+							td 
+						tr
+							td &nbsp;
+							td &nbsp;
+
+						tr
+							td Mountain Bike
+							td 
+						tr
+							td &nbsp;
+							td &nbsp;
+
+						tr
+							td Lawn Mower
+							td 
+						tr
+							td &nbsp;
+							td &nbsp;
+						tr
+							td Camping Package
+							td Harvey and Sheri Gutierrez
+
+
+
