--- a/views/wedding.jade
+++ b/views/wedding.jade
@@ -18,7 +18,7 @@ block content
 					div.col-md-6
 						h3 <span>M</span>atron of <span>H</span>onour
 						ul.headshot
-							li <img src="/images/female-blank.jpg" /><span>Mary Katherine</span>
+							li <img src="/images/headshots/Mary.jpg" /><span>Mary Katherine</span>
 					div.col-md-6
 						h3 <span>B</span>est <span>M</span>en
 						ul.headshot
@@ -29,14 +29,14 @@ block content
 					div.col-md-12
 						h3 <span>B</span>ridesmaids
 						ul.headshot
-							li <img src="/images/female-blank.jpg" /><span>Christine</span>
-							li <img src="/images/female-blank.jpg" /><span>Jessica</span>
+							li <img src="/images/headshots/Christine.jpg" /><span>Christine</span>
+							li <img src="/images/headshots/Jessica.jpg" /><span>Jessica</span>
 							li <img src="/images/female-blank.jpg" /><span>Joyce</span>
 							li <img src="/images/female-blank.jpg" /><span>Katrina</span>
 							li <img src="/images/female-blank.jpg" /><span>Monica</span>
 							li <img src="/images/female-blank.jpg" /><span>Nadine</span>
 							li <img src="/images/female-blank.jpg" /><span>Shannon</span>
-							li <img src="/images/female-blank.jpg" /><span>Sherlyn</span>
+							li <img src="/images/headshots/Sherlyn.jpg" /><span>Sherlyn</span>
 
 				div.row
 					div.col-md-12
@@ -57,7 +57,7 @@ block content
 						ul.headshot
 							li <img src="/images/female-blank.jpg" /><span>Gayle</span>
 							li <img src="/images/female-blank.jpg" /><span>Jezel</span>
-							li <img src="/images/female-blank.jpg" /><span>Rhegie</span>
+							li <img src="/images/headshots/Rhegie.jpg" /><span>Rhegie</span>
 					div.col-md-6
 						h3 <span>J</span>unior <span>G</span>roomsmen
 						ul.headshot
