Wedding - Changed Tin's image

--- a/views/wedding.jade
+++ b/views/wedding.jade
@@ -29,7 +29,8 @@ block content
 					div.col-md-12
 						h3 <span>B</span>ridesmaids
 						ul.headshot
-							li <img src="/images/entourage/Christine.jpg" /><span>Christine</span>
+							//- li <img src="/images/entourage/Christine.jpg" /><span>Christine</span>
+							li <img src="/images/entourage/Christine-2.jpg" /><span>Christine</span>
 							li <img src="/images/entourage/Jessica.jpg" /><span>Jessica</span>
 							li <img src="/images/female-blank.jpg" /><span>Joyce</span>
 							li <img src="/images/female-blank.jpg" /><span>Katrina</span>
