--- a/views/wedding.jade
+++ b/views/wedding.jade
@@ -11,8 +11,8 @@ block content
 				div.row.brideAndGroom
 					div.col-md-12
 						ul.headshot
-							li <img src="/images/female-blank.jpg" /><span>Joanne</span>
-							li <img src="/images/male-blank.jpg" /><span>Herald</span>
+							li <img src="/images/entourage/Joanne.jpg" /><span>Joanne</span>
+							li <img src="/images/entourage/male-blank.jpg" /><span>Herald</span>
 
 				div.row
 					div.col-md-6
@@ -22,88 +22,88 @@ block content
 					div.col-md-6
 						h3 <span>B</span>est <span>M</span>en
 						ul.headshot
-							li <img src="/images/male-blank.jpg" /><span>Harvey</span>
-							li <img src="/images/male-blank.jpg" /><span>Herschel</span>
+							li <img src="/images/entourage/Harvey.jpg" /><span>Harvey</span>
+							li <img src="/images/entourage/male-blank.jpg" /><span>Herschel</span>
 							
 				div.row
 					div.col-md-12
 						h3 <span>B</span>ridesmaids
 						ul.headshot
-							//- li <img src="/images/entourage/Christine.jpg" /><span>Christine</span>
-							li <img src="/images/entourage/Christine-2.jpg" /><span>Christine</span>
+							li <img src="/images/entourage/Christine.jpg" /><span>Christine</span>
+							//- li <img src="/images/entourage/Christine-2.jpg" /><span>Christine</span>
 							li <img src="/images/entourage/Jessica.jpg" /><span>Jessica</span>
-							li <img src="/images/female-blank.jpg" /><span>Joyce</span>
-							li <img src="/images/female-blank.jpg" /><span>Katrina</span>
-							li <img src="/images/female-blank.jpg" /><span>Monica</span>
-							li <img src="/images/female-blank.jpg" /><span>Nadine</span>
-							li <img src="/images/female-blank.jpg" /><span>Shannon</span>
+							li <img src="/images/entourage/female-blank.jpg" /><span>Joyce</span>
+							li <img src="/images/entourage/female-blank.jpg" /><span>Katrina</span>
+							li <img src="/images/entourage/female-blank.jpg" /><span>Monica</span>
+							li <img src="/images/entourage/female-blank.jpg" /><span>Nadine</span>
+							li <img src="/images/entourage/female-blank.jpg" /><span>Shannon</span>
 							li <img src="/images/entourage/Sherlyn.jpg" /><span>Sherlyn</span>
 
 				div.row
 					div.col-md-12
 						h3 <span>G</span>roomsmen
 						ul.headshot
-							li <img src="/images/male-blank.jpg" /><span>Alvin</span>
-							li <img src="/images/male-blank.jpg" /><span>Archie</span>
-							li <img src="/images/male-blank.jpg" /><span>Bennet</span>
-							li <img src="/images/male-blank.jpg" /><span>Christian</span>
-							li <img src="/images/male-blank.jpg" /><span>Jekko</span>
-							li <img src="/images/male-blank.jpg" /><span>Mark</span>
-							li <img src="/images/male-blank.jpg" /><span>Marlon</span>
-							li <img src="/images/male-blank.jpg" /><span>Raymond</span>
+							li <img src="/images/entourage/Alvin.jpg" /><span>Alvin</span>
+							li <img src="/images/entourage/male-blank.jpg" /><span>Archie</span>
+							li <img src="/images/entourage/male-blank.jpg" /><span>Bennet</span>
+							li <img src="/images/entourage/male-blank.jpg" /><span>Christian</span>
+							li <img src="/images/entourage/Mark.jpg" /><span>Jekko</span>
+							li <img src="/images/entourage/male-blank.jpg" /><span>Mark</span>
+							li <img src="/images/entourage/male-blank.jpg" /><span>Marlon</span>
+							li <img src="/images/entourage/male-blank.jpg" /><span>Raymond</span>
 
 				div.row
 					div.col-md-6
 						h3 <span>J</span>unior <span>B</span>ridesmaids
 						ul.headshot
-							li <img src="/images/female-blank.jpg" /><span>Gayle</span>
-							li <img src="/images/female-blank.jpg" /><span>Jezel</span>
+							li <img src="/images/entourage/female-blank.jpg" /><span>Gayle</span>
+							li <img src="/images/entourage/female-blank.jpg" /><span>Jezel</span>
 							li <img src="/images/entourage/Rhegie.jpg" /><span>Rhegie</span>
 					div.col-md-6
 						h3 <span>J</span>unior <span>G</span>roomsmen
 						ul.headshot
-							li <img src="/images/male-blank.jpg" /><span>John</span>
-							li <img src="/images/male-blank.jpg" /><span>Jon</span>
-							li <img src="/images/male-blank.jpg" /><span>Zeeron</span>
+							li <img src="/images/entourage/male-blank.jpg" /><span>John</span>
+							li <img src="/images/entourage/male-blank.jpg" /><span>Jon</span>
+							li <img src="/images/entourage/male-blank.jpg" /><span>Zeeron</span>
 
 
-				div.row
-					div.col-md-6
-						h3 <span>F</span>lower <span>G</span>irls
-						ul.list
-							li Ashely Maranan
-							li Jenelle
-							li Karmyn Jade Maranan
-							li Lulu Presto
-							li Malayah Presto
-							li Marla Nagutum
-							li Sarah Presto
-							li Senia Mendoza
-							li Yhen Yhen Pangan
-					div.col-md-6
-						div.row
-							div.col-md-12
-								h3 <span>B</span>ible <span>B</span>earer
-								ul
-									li Cian Ilag
-							div.col-md-12
-								h3 <span>R</span>ing <span>B</span>earer
-								ul
-									li Cameron Presto
-							div.col-md-12
-								h3 <span>C</span>oin <span>B</span>earer
-								ul
-									li Noah Presto
+				//- div.row
+				//- 	div.col-md-6
+				//- 		h3 <span>F</span>lower <span>G</span>irls
+				//- 		ul.list
+				//- 			li Ashely Maranan
+				//- 			li Jenelle
+				//- 			li Karmyn Jade Maranan
+				//- 			li Lulu Presto
+				//- 			li Malayah Presto
+				//- 			li Marla Nagutum
+				//- 			li Sarah Presto
+				//- 			li Senia Mendoza
+				//- 			li Yhen Yhen Pangan
+				//- 	div.col-md-6
+				//- 		div.row
+				//- 			div.col-md-12
+				//- 				h3 <span>B</span>ible <span>B</span>earer
+				//- 				ul
+				//- 					li Cian Ilag
+				//- 			div.col-md-12
+				//- 				h3 <span>R</span>ing <span>B</span>earer
+				//- 				ul
+				//- 					li Cameron Presto
+				//- 			div.col-md-12
+				//- 				h3 <span>C</span>oin <span>B</span>earer
+				//- 				ul
+				//- 					li Noah Presto
 
-				div.row
-					div.col-md-6
-						h3 <span>L</span>ittle <span>B</span>ride
-						ul
-							li Emily Adele Gutierrez
-					div.col-md-6
-						h3 <span>L</span>ittle <span>G</span>room
-						ul
-							li Leo Carter Gutierrez
+				//- div.row
+				//- 	div.col-md-6
+				//- 		h3 <span>L</span>ittle <span>B</span>ride
+				//- 		ul
+				//- 			li Emily Adele Gutierrez
+				//- 	div.col-md-6
+				//- 		h3 <span>L</span>ittle <span>G</span>room
+				//- 		ul
+				//- 			li Leo Carter Gutierrez
 
 
 				br
