--- a/public/stylesheets/wedding.css
+++ b/public/stylesheets/wedding.css
@@ -33,8 +33,8 @@ body {
         visibility: visible; }
 
 .brideAndGroom img {
-  width: 200px;
-  height: 250px; }
+  width: 200px !important;
+  height: 250px !important; }
   .brideAndGroom img:first-child {
     margin-left: 15px !important;
     margin-right: 15px !important; }
