Wedding - Placed wrong picture

--- a/views/wedding.jade
+++ b/views/wedding.jade
@@ -47,8 +47,8 @@ block content
 							li <img src="/images/entourage/male-blank.jpg" /><span>Archie</span>
 							li <img src="/images/entourage/male-blank.jpg" /><span>Bennet</span>
 							li <img src="/images/entourage/male-blank.jpg" /><span>Christian</span>
-							li <img src="/images/entourage/Mark.jpg" /><span>Jekko</span>
-							li <img src="/images/entourage/male-blank.jpg" /><span>Mark</span>
+							li <img src="/images/entourage/male-blank.jpg" /><span>Jekko</span>
+							li <img src="/images/entourage/Mark.jpg" /><span>Mark</span>
 							li <img src="/images/entourage/male-blank.jpg" /><span>Marlon</span>
 							li <img src="/images/entourage/male-blank.jpg" /><span>Raymond</span>
 
