--- a/public/stylesheets/Source/wedding.scss
+++ b/public/stylesheets/Source/wedding.scss
@@ -26,6 +26,7 @@ body
 				opacity: 0.75;
 				transition: 0.3s ease;
 				margin: 5px;
+				padding: 0 5px;
 
 				img 
 				{
@@ -54,7 +55,7 @@ body
 					transform: scale(1.5, 1.5);
 					opacity: 1;
 					z-index: 999;
-					padding: 0 10px;
+					padding: 0 15px;
 
 					span 
 					{
@@ -72,6 +73,9 @@ body
 	{
 		width: 200px !important;
 		height: 250px !important;
+		-webkit-border-radius: 25% !important;
+		-moz-border-radius: 25% !important;
+		border-radius: 25% !important;
 
 		&:first-child
 		{
