--- a/public/stylesheets/Source/wedding-social.scss
+++ b/public/stylesheets/Source/wedding-social.scss
@@ -9,6 +9,34 @@ body
 	font-size: 30px;
 }
 
+table 
+{
+	border-collapse: collapse;
+	margin-bottom: 30px;
+
+	tr
+	{
+		th
+		{
+			text-align: center;
+			font-size: 30px;
+			padding: 5px;
+		}
+
+		td
+		{
+			padding: 10px;
+			vertical-align: top;
+		}
+	}
+}
+
+table, th, td {
+	border: 1px solid white;
+}
+
+
+
 /* Small devices (tablets, 768px and down) */
 @media (max-width: 768px)
 {
