Revert "Wedding - Added more photos"
This reverts commit cbe7c0914e29251882ed2a72a57b3a7b0eb01955.

--- a/views/wedding.jade
+++ b/views/wedding.jade
@@ -31,8 +31,8 @@ block content
 						ul.headshot
 							li <img src="/images/entourage/Christine.jpg" /><span>Christine</span>
 							li <img src="/images/entourage/Jessica.jpg" /><span>Jessica</span>
-							li <img src="/images/entourage/Joyce.jpg" /><span>Joyce</span>
-							li <img src="/images/entourage/Katrina.jpg" /><span>Katrina</span>
+							li <img src="/images/entourage/female-blank.jpg" /><span>Joyce</span>
+							li <img src="/images/entourage/female-blank.jpg" /><span>Katrina</span>
 							li <img src="/images/entourage/Monica.jpg" /><span>Monica</span>
 							li <img src="/images/entourage/Nadine.jpg" /><span>Nadine</span>
 							li <img src="/images/entourage/Shannon.jpg" /><span>Shannon</span>
@@ -43,13 +43,13 @@ block content
 						h3 <span>G</span>roomsmen
 						ul.headshot
 							li <img src="/images/entourage/Alvin.jpg" /><span>Alvin</span>
-							li <img src="/images/entourage/Archie.jpg" /><span>Archie</span>
+							li <img src="/images/entourage/male-blank.jpg" /><span>Archie</span>
 							li <img src="/images/entourage/male-blank.jpg" /><span>Bennet</span>
 							li <img src="/images/entourage/male-blank.jpg" /><span>Christian</span>
 							li <img src="/images/entourage/male-blank.jpg" /><span>Jekko</span>
 							li <img src="/images/entourage/Mark.jpg" /><span>Mark</span>
 							li <img src="/images/entourage/male-blank.jpg" /><span>Marlon</span>
-							li <img src="/images/entourage/Raymond.jpg" /><span>Raymond</span>
+							li <img src="/images/entourage/male-blank.jpg" /><span>Raymond</span>
 
 				div.row
 					div.col-md-6
