--- a/public/stylesheets/Source/wedding.scss
+++ b/public/stylesheets/Source/wedding.scss
@@ -33,11 +33,6 @@ body
 					margin: 0 auto;
 					display: block;
 					
-					// mask-image: url('../images/cicle-mask.png');
-					// mask-mode: alpha;
-					// mask-repeat: no-repeat;
-					// mask-size: 100%;		
-					// border: 1px solid;
 					-webkit-border-radius: 50%;
 					-moz-border-radius: 50%;
 					border-radius: 50%;
@@ -52,7 +47,7 @@ body
 
 				&:hover, &:focus
 				{
-					transform: scale(1.5, 1.5);
+					transform: scale(1.25, 1.25);
 					opacity: 1;
 					z-index: 999;
 					padding: 0 15px;
@@ -69,6 +64,8 @@ body
 
 .brideAndGroom
 {
+	margin-top: 40px;
+
 	img 
 	{
 		width: 200px !important;
@@ -84,6 +81,213 @@ body
 		}
 	}
 }
+
+.heart
+{
+	img 
+	{
+		-webkit-mask-image: url('../images/mask-heart.png');
+		-webkit-mask-mode: alpha;
+		-webkit-mask-repeat: no-repeat;
+		-webkit-mask-size: 100%;
+
+		mask-image: url('../images/mask-heart.png');
+		mask-mode: alpha;
+		mask-repeat: no-repeat;
+		mask-size: 100%;
+
+		transition: 0.3s ease;
+		width: 300px;
+		height: 300px;
+
+		&:hover, &:focus
+		{
+			transform: scale(1.25, 1.25);
+			opacity: 1;
+			z-index: 999;
+		}
+	}
+}
+
+
+
+
+.timeline 
+{
+	list-style: none;
+	padding: 20px 0 20px;
+	position: relative;
+	margin-top: 50px !important;
+
+	&:before 
+	{
+		top: 0;
+		bottom: 0;
+		position: absolute;
+		content: " ";
+		width: 3px;
+		background-color: #eeeeee;
+		left: 50%;
+		margin-left: -1.5px;
+	}
+
+	> li 
+	{
+		margin-bottom: 20px;
+		position: relative;
+
+		&:before 
+		{
+			content: " ";
+			display: table;
+		}
+
+		&:after 
+		{
+			content: " ";
+			display: table;
+			clear: both;
+		}
+
+		> .timeline-panel
+		{
+			width: 46%;
+			float: left;
+			border: 1px solid #d4d4d4;
+			border-radius: 2px;
+			padding: 20px;
+			position: relative;
+			-webkit-box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
+			box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
+
+			&:before
+			{
+				position: absolute;
+				top: 26px;
+				right: -15px;
+				display: inline-block;
+				border-top: 15px solid transparent;
+				border-left: 15px solid #ccc;
+				border-right: 0 solid #ccc;
+				border-bottom: 15px solid transparent;
+				content: " ";
+			}
+
+			&:after 
+			{
+				position: absolute;
+				top: 27px;
+				right: -14px;
+				display: inline-block;
+				border-top: 14px solid transparent;
+				border-left: 14px solid #fff;
+				border-right: 0 solid #fff;
+				border-bottom: 14px solid transparent;
+				content: " ";
+			}
+		}
+
+		> .timeline-badge 
+		{
+			color: #fff;
+			width: 50px;
+			height: 50px;
+			line-height: 50px;
+			font-size: 1.4em;
+			text-align: center;
+			position: absolute;
+			top: 16px;
+			left: 50%;
+			margin-left: -25px;
+			background-color: #999999;
+			z-index: 100;
+			border-top-right-radius: 50%;
+			border-top-left-radius: 50%;
+			border-bottom-right-radius: 50%;
+			border-bottom-left-radius: 50%;
+
+			&.blue 
+			{
+				background-color: #2e6da4 !important;
+			}
+
+			&.green 
+			{
+				background-color: #3f903f !important;
+			}
+
+			&.yellow 
+			{
+				background-color: #f0ad4e !important;
+			}
+
+			&.red 
+			{
+				background-color: #d9534f !important;
+			}
+
+			&.light-blue 
+			{
+				background-color: #5bc0de !important;
+			}
+
+			.fa 
+			{
+				margin-top: 11px;
+			}
+		}
+
+		&:nth-child(even)
+		{
+			> .timeline-panel 
+			{
+				float: right;
+
+				&:before 
+				{
+					border-left-width: 0;
+					border-right-width: 15px;
+					left: -15px;
+					right: auto;
+				}
+
+				&:after 
+				{
+					border-left-width: 0;
+					border-right-width: 14px;
+					left: -14px;
+					right: auto;
+				}
+			}
+		}
+
+		&:nth-child(odd)
+		{
+			text-align: right;
+		}
+	}
+
+	.timeline-title 
+	{
+		font-weight: bold;
+		margin-top: 0;
+		color: inherit;
+	}
+
+	.timeline-body > p,
+	.timeline-body > ul {
+		margin-bottom: 0;
+	}
+
+	.timeline-body > p + p {
+		margin-top: 5px;
+	}
+}
+
+
+
+
+
 
 /* Small devices (tablets, 768px and down) */
 @media (max-width: 768px)
@@ -127,5 +331,34 @@ body
 				}
 			}
 		}	
+	}
+
+	.timeline 
+	{
+		margin-left: -80% !important;
+
+		> li 
+		{
+			> .timeline-panel 
+			{
+				float: right;
+
+				&:before 
+				{
+					border-left-width: 0;
+					border-right-width: 15px;
+					left: -15px;
+					right: auto;
+				}
+
+				&:after 
+				{
+					border-left-width: 0;
+					border-right-width: 14px;
+					left: -14px;
+					right: auto;
+				}
+			}
+		}
 	}
 }
