--- a/public/stylesheets/wedding.css
+++ b/public/stylesheets/wedding.css
@@ -26,22 +26,147 @@ body {
     .content ul.headshot li span {
       visibility: hidden; }
     .content ul.headshot li:hover, .content ul.headshot li:focus {
-      transform: scale(1.5, 1.5);
+      transform: scale(1.25, 1.25);
       opacity: 1;
       z-index: 999;
       padding: 0 15px; }
       .content ul.headshot li:hover span, .content ul.headshot li:focus span {
         visibility: visible; }
 
-.brideAndGroom img {
-  width: 200px !important;
-  height: 250px !important;
-  -webkit-border-radius: 25% !important;
-  -moz-border-radius: 25% !important;
-  border-radius: 25% !important; }
-  .brideAndGroom img:first-child {
-    margin-left: 15px !important;
-    margin-right: 15px !important; }
+.brideAndGroom {
+  margin-top: 40px; }
+  .brideAndGroom img {
+    width: 200px !important;
+    height: 250px !important;
+    -webkit-border-radius: 25% !important;
+    -moz-border-radius: 25% !important;
+    border-radius: 25% !important; }
+    .brideAndGroom img:first-child {
+      margin-left: 15px !important;
+      margin-right: 15px !important; }
+
+.heart img {
+  -webkit-mask-image: url("../images/mask-heart.png");
+  -webkit-mask-mode: alpha;
+  -webkit-mask-repeat: no-repeat;
+  -webkit-mask-size: 100%;
+  mask-image: url("../images/mask-heart.png");
+  mask-mode: alpha;
+  mask-repeat: no-repeat;
+  mask-size: 100%;
+  transition: 0.3s ease;
+  width: 300px;
+  height: 300px; }
+  .heart img:hover, .heart img:focus {
+    transform: scale(1.25, 1.25);
+    opacity: 1;
+    z-index: 999; }
+
+.timeline {
+  list-style: none;
+  padding: 20px 0 20px;
+  position: relative;
+  margin-top: 50px !important; }
+  .timeline:before {
+    top: 0;
+    bottom: 0;
+    position: absolute;
+    content: " ";
+    width: 3px;
+    background-color: #eeeeee;
+    left: 50%;
+    margin-left: -1.5px; }
+  .timeline > li {
+    margin-bottom: 20px;
+    position: relative; }
+    .timeline > li:before {
+      content: " ";
+      display: table; }
+    .timeline > li:after {
+      content: " ";
+      display: table;
+      clear: both; }
+    .timeline > li > .timeline-panel {
+      width: 46%;
+      float: left;
+      border: 1px solid #d4d4d4;
+      border-radius: 2px;
+      padding: 20px;
+      position: relative;
+      -webkit-box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
+      box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175); }
+      .timeline > li > .timeline-panel:before {
+        position: absolute;
+        top: 26px;
+        right: -15px;
+        display: inline-block;
+        border-top: 15px solid transparent;
+        border-left: 15px solid #ccc;
+        border-right: 0 solid #ccc;
+        border-bottom: 15px solid transparent;
+        content: " "; }
+      .timeline > li > .timeline-panel:after {
+        position: absolute;
+        top: 27px;
+        right: -14px;
+        display: inline-block;
+        border-top: 14px solid transparent;
+        border-left: 14px solid #fff;
+        border-right: 0 solid #fff;
+        border-bottom: 14px solid transparent;
+        content: " "; }
+    .timeline > li > .timeline-badge {
+      color: #fff;
+      width: 50px;
+      height: 50px;
+      line-height: 50px;
+      font-size: 1.4em;
+      text-align: center;
+      position: absolute;
+      top: 16px;
+      left: 50%;
+      margin-left: -25px;
+      background-color: #999999;
+      z-index: 100;
+      border-top-right-radius: 50%;
+      border-top-left-radius: 50%;
+      border-bottom-right-radius: 50%;
+      border-bottom-left-radius: 50%; }
+      .timeline > li > .timeline-badge.blue {
+        background-color: #2e6da4 !important; }
+      .timeline > li > .timeline-badge.green {
+        background-color: #3f903f !important; }
+      .timeline > li > .timeline-badge.yellow {
+        background-color: #f0ad4e !important; }
+      .timeline > li > .timeline-badge.red {
+        background-color: #d9534f !important; }
+      .timeline > li > .timeline-badge.light-blue {
+        background-color: #5bc0de !important; }
+      .timeline > li > .timeline-badge .fa {
+        margin-top: 11px; }
+    .timeline > li:nth-child(even) > .timeline-panel {
+      float: right; }
+      .timeline > li:nth-child(even) > .timeline-panel:before {
+        border-left-width: 0;
+        border-right-width: 15px;
+        left: -15px;
+        right: auto; }
+      .timeline > li:nth-child(even) > .timeline-panel:after {
+        border-left-width: 0;
+        border-right-width: 14px;
+        left: -14px;
+        right: auto; }
+    .timeline > li:nth-child(odd) {
+      text-align: right; }
+  .timeline .timeline-title {
+    font-weight: bold;
+    margin-top: 0;
+    color: inherit; }
+  .timeline .timeline-body > p,
+  .timeline .timeline-body > ul {
+    margin-bottom: 0; }
+  .timeline .timeline-body > p + p {
+    margin-top: 5px; }
 
 /* Small devices (tablets, 768px and down) */
 @media (max-width: 768px) {
@@ -58,4 +183,19 @@ body {
     visibility: visible; }
   .content ul.headshot li img {
     width: 80px;
-    height: 80px; } }
+    height: 80px; }
+
+  .timeline {
+    margin-left: -80% !important; }
+    .timeline > li > .timeline-panel {
+      float: right; }
+      .timeline > li > .timeline-panel:before {
+        border-left-width: 0;
+        border-right-width: 15px;
+        left: -15px;
+        right: auto; }
+      .timeline > li > .timeline-panel:after {
+        border-left-width: 0;
+        border-right-width: 14px;
+        left: -14px;
+        right: auto; } }
