--- a/views/wedding.jade
+++ b/views/wedding.jade
@@ -14,6 +14,97 @@ block content
 							li <img src="/images/entourage/Joanne.jpg" /><span>Joanne</span>
 							li <img src="/images/entourage/Herald.jpg" /><span>Herald</span>
 
+			div.row
+				div.col-md-12
+					ul.timeline
+						li 	
+							div.timeline-badge <i class='fa fa-building'></i>
+							div.timeline-panel
+								div.timeline-heading 
+									h4.timeline-title <i class='fa fa-calendar'></i> 2010
+								div.timeline-body
+									p Worked at Shoppers Drug Mart together
+						li
+							div.timeline-badge.yellow <i class='fa fa-birthday-cake'></i>
+							div.timeline-panel
+								div.timeline-heading
+									h4.timeline-title <i class='fa fa-calendar'></i> February 2012
+								div.timeline-body
+									p First time celebrating Joanne's birthday together
+						li
+							div.timeline-badge.light-blue <i class='fa fa-soccer-ball-o'></i>
+							div.timeline-panel
+								div.timeline-heading
+									h4.timeline-title <i class='fa fa-calendar'></i> February 2012
+								div.timeline-body
+									p First time snowboarding together
+						li
+							div.timeline-badge.red <i class='fa fa-heart'></i>
+							div.timeline-panel
+								div.timeline-heading
+									h4.timeline-title <i class='fa fa-calendar'></i> May 2012
+								div.timeline-body
+									p Officially a couple
+						li
+							div.timeline-badge.light-blue <i class='fa fa-plane'></i>
+							div.timeline-panel
+								div.timeline-heading
+									h4.timeline-title <i class='fa fa-calendar'></i> June 2013
+								div.timeline-body
+									p Travelled to Toronto
+						li
+							div.timeline-badge <i class='fa fa-graduation-cap'></i>
+							div.timeline-panel
+								div.timeline-heading
+									h4.timeline-title <i class='fa fa-calendar'></i> October 2013
+								div.timeline-body
+									p Herald graduated from University of Manitoba
+						li
+							div.timeline-badge.light-blue <i class='fa fa-plane'></i>
+							div.timeline-panel
+								div.timeline-heading
+									h4.timeline-title <i class='fa fa-calendar'></i> August 2015
+								div.timeline-body
+									p Travelled to New York City, Phildelphia, and Washington D.C.
+						li
+							div.timeline-badge.light-blue <i class='fa fa-plane'></i>
+							div.timeline-panel
+								div.timeline-heading
+									h4.timeline-title <i class='fa fa-calendar'></i> August 2016
+								div.timeline-body
+									p Travelled to Vancover, and Seattle
+						li
+							div.timeline-badge.light-blue <i class='fa fa-plane'></i>
+							div.timeline-panel
+								div.timeline-heading
+									h4.timeline-title <i class='fa fa-calendar'></i> November 2016
+								div.timeline-body
+									p Travelled to the Philippines
+						li
+							div.timeline-badge.green <i class='fa fa-diamond'></i>
+							div.timeline-panel
+								div.timeline-heading
+									h4.timeline-title <i class='fa fa-calendar'></i> February 2017
+								div.timeline-body
+									p Engaged
+						li
+							div.timeline-badge.yellow <i class='fa fa-diamond'></i>
+							div.timeline-panel
+								div.timeline-heading
+									h4.timeline-title <i class='fa fa-calendar'></i> June 30, 2018
+								div.timeline-body
+									p I DO
+
+			div.center
+				div.row
+					div.col-md-12
+						div.heart
+							img(src='/images/couple.jpg')
+
+				div.row
+					div.col-md-12
+						h1 <span>O</span>ur <span>E</span>ntourage
+
 				div.row
 					div.col-md-6
 						h3 <span>M</span>atron of <span>H</span>onour
