Wedding - Removed icon colour

--- a/views/wedding.jade
+++ b/views/wedding.jade
@@ -25,28 +25,28 @@ block content
 								div.timeline-body
 									p Worked at Shoppers Drug Mart together
 						li
-							div.timeline-badge.yellow <i class='fa fa-birthday-cake'></i>
+							div.timeline-badge <i class='fa fa-birthday-cake'></i>
 							div.timeline-panel
 								div.timeline-heading
 									h4.timeline-title <i class='fa fa-calendar'></i> February 2012
 								div.timeline-body
 									p First time celebrating Joanne's birthday together
 						li
-							div.timeline-badge.light-blue <i class='fa fa-soccer-ball-o'></i>
+							div.timeline-badge <i class='fa fa-soccer-ball-o'></i>
 							div.timeline-panel
 								div.timeline-heading
 									h4.timeline-title <i class='fa fa-calendar'></i> February 2012
 								div.timeline-body
 									p First time snowboarding together
 						li
-							div.timeline-badge.red <i class='fa fa-heart'></i>
+							div.timeline-badge <i class='fa fa-heart'></i>
 							div.timeline-panel
 								div.timeline-heading
 									h4.timeline-title <i class='fa fa-calendar'></i> May 2012
 								div.timeline-body
 									p Officially a couple
 						li
-							div.timeline-badge.light-blue <i class='fa fa-plane'></i>
+							div.timeline-badge <i class='fa fa-plane'></i>
 							div.timeline-panel
 								div.timeline-heading
 									h4.timeline-title <i class='fa fa-calendar'></i> June 2013
@@ -60,35 +60,35 @@ block content
 								div.timeline-body
 									p Herald graduated from University of Manitoba
 						li
-							div.timeline-badge.light-blue <i class='fa fa-plane'></i>
+							div.timeline-badge <i class='fa fa-plane'></i>
 							div.timeline-panel
 								div.timeline-heading
 									h4.timeline-title <i class='fa fa-calendar'></i> August 2015
 								div.timeline-body
 									p Travelled to New York City, Phildelphia, and Washington D.C.
 						li
-							div.timeline-badge.light-blue <i class='fa fa-plane'></i>
+							div.timeline-badge <i class='fa fa-plane'></i>
 							div.timeline-panel
 								div.timeline-heading
 									h4.timeline-title <i class='fa fa-calendar'></i> August 2016
 								div.timeline-body
 									p Travelled to Vancover, and Seattle
 						li
-							div.timeline-badge.light-blue <i class='fa fa-plane'></i>
+							div.timeline-badge <i class='fa fa-plane'></i>
 							div.timeline-panel
 								div.timeline-heading
 									h4.timeline-title <i class='fa fa-calendar'></i> November 2016
 								div.timeline-body
 									p Travelled to the Philippines
 						li
-							div.timeline-badge.green <i class='fa fa-diamond'></i>
+							div.timeline-badge <i class='fa fa-diamond'></i>
 							div.timeline-panel
 								div.timeline-heading
 									h4.timeline-title <i class='fa fa-calendar'></i> February 2017
 								div.timeline-body
 									p Engaged
 						li
-							div.timeline-badge.yellow <i class='fa fa-diamond'></i>
+							div.timeline-badge <i class='fa fa-diamond'></i>
 							div.timeline-panel
 								div.timeline-heading
 									h4.timeline-title <i class='fa fa-calendar'></i> June 30, 2018
