--- a/views/wedding.jade
+++ b/views/wedding.jade
@@ -31,13 +31,7 @@ block content
 									h4.timeline-title <i class='fa fa-calendar'></i> February 2012
 								div.timeline-body
 									p First time celebrating Joanne's birthday together
-						li
-							div.timeline-badge <i class='fa fa-soccer-ball-o'></i>
-							div.timeline-panel
-								div.timeline-heading
-									h4.timeline-title <i class='fa fa-calendar'></i> February 2012
-								div.timeline-body
-									p First time snowboarding together
+									p Joanne graduated from University of Manitoba
 						li
 							div.timeline-badge <i class='fa fa-heart'></i>
 							div.timeline-panel
@@ -152,7 +146,7 @@ block content
 					div.col-md-6
 						h3 <span>J</span>unior <span>G</span>roomsmen
 						ul.headshot
-							li <img src="/images/entourage/male-blank.jpg" /><span>John</span>
+							li <img src="/images/entourage/male-blank.jpg" /><span>John Raven</span>
 							li <img src="/images/entourage/male-blank.jpg" /><span>Jon</span>
 							li <img src="/images/entourage/Zeeron.jpg" /><span>Zeeron</span>
 
